[package]
name = "vitrail-rs"
version = "0.1.0"
authors = ["Jonathan Landicheff"]
edition = "2018"
license-file = "LICENSE.MD"

[lib]
name = "vitrail"
path = "src/lib.rs"

[[bin]]
name = "vitrail"
path = "src/main.rs"
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
rand_seeder = "0.2.2"
serde_json = "1.0.75"
